--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"description": "The CodeIgniter framework",
-	"name": "codeigniter/framework",
+	"description": "Sistem Keamanan Data Harapan Jaya",
+	"name": "rsdiz/sikada-harapan-jaya",
 	"type": "project",
 	"homepage": "https://codeigniter.com",
 	"license": "MIT",
